--- a/calculator-business-domain/calculator-service/src/main/resources/application.properties
+++ b/calculator-business-domain/calculator-service/src/main/resources/application.properties
@@ -4,11 +4,18 @@ springdoc.swagger-ui.path=/swagger.html
 # Disabling the swagger-ui
 springdoc.swagger-ui.enabled=true
 #spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=qwerty
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=qwerty
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.application.name=calculator-service
+
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
