--- a/calculator-infraestructure/pom.xml
+++ b/calculator-infraestructure/pom.xml
@@ -20,6 +20,7 @@
 	<modules>
 		<module>eureka-server</module>
 		<module>admin-server</module>
+		<module>apigateway</module>
 	</modules>
 
 	<dependencyManagement>
