--- a/calculator-infraestructure/apigateway/pom.xml
+++ b/calculator-infraestructure/apigateway/pom.xml
@@ -28,6 +28,12 @@
 			<optional>true</optional>
 			<version>${org.lombo.version}</version>
 		</dependency>
+		
+		 <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>    
+		
 	</dependencies>
 
 
