--- a/calculator-infraestructure/apigateway/src/main/resources/application.yml
+++ b/calculator-infraestructure/apigateway/src/main/resources/application.yml
@@ -3,18 +3,24 @@
 server:
     port: 8080
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
     reactor.netty.http.client: DEBUG
 
 spring:
+  application:
+    name: apigateway
   cloud:
     gateway:
       routes:
-      - id: customer_service
-        uri: http://localhost:8081
+      - id: calculator-service
+        uri: lb://calculator-service
         predicates:
-        - Path=/customer/**
-            
-            
+        - Path=/calculator/**
