--- a/calculator-business-domain/calculator-provider/src/main/resources/application.properties
+++ b/calculator-business-domain/calculator-provider/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=0
-# swagger-ui custom path
 springdoc.swagger-ui.path=/swagger.html
-# Disabling the swagger-ui
 springdoc.swagger-ui.enabled=true
 spring.application.name=calculator-provider
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
