--- a/calculator-infraestructure/admin-server/src/main/resources/application.yml
+++ b/calculator-infraestructure/admin-server/src/main/resources/application.yml
@@ -15,7 +15,7 @@ eureka:
   client:
     registryFetchIntervalSeconds: 5
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: ${EUREKA_SERVER:http://localhost:8761/eureka}
 --- #As with Spring Boot 2 most of the endpoints aren’t exposed via http by default, we expose all of them. For production you should carefully choose which endpoints to expose
 management: 
   endpoints:
