--- a/calculator-business-domain/pom.xml
+++ b/calculator-business-domain/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.calculator</groupId>
 		<artifactId>calculator</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<groupId>com.calculator.businessdomain</groupId>
 	<artifactId>calculator-business-domain</artifactId>
