--- a/calculator-infraestructure/apigateway/pom.xml
+++ b/calculator-infraestructure/apigateway/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
     <groupId>com.calculator.infraestructure</groupId>
     <artifactId>calculator-infraestructure</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
 
 	<artifactId>apigateway</artifactId>
