--- a/calculator-infraestructure/eureka-server/pom.xml
+++ b/calculator-infraestructure/eureka-server/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.calculator.infraestructure</groupId>
     <artifactId>calculator-infraestructure</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <artifactId>eureka-server</artifactId>
   
