--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
 				<configuration>
 				</configuration>
 			</plugin>
-			 <plugin>
+			<!-- <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>${dockerfile-maven-version}</version>                               
@@ -129,7 +129,7 @@
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
                 </configuration>
-            </plugin>
+            </plugin> -->
 		</plugins>
 	</build>
 	<modules>
