--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,4 +18,4 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn clean install --file pom.xml
+        run: mvn -f  /calculator-business-domain/calculator-provider/ clean compile
