--- a/calculator-infraestructure/apigateway/pom.xml
+++ b/calculator-infraestructure/apigateway/pom.xml
@@ -60,9 +60,9 @@
                 </executions>
                 <configuration>                       
                     <repository>registry.hub.docker.com/${project.groupId}/${project.artifactId}</repository>
-                    <tag>${project.version}</tag>
+                    <tag>1.0</tag>
                     <buildArgs>
-                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                        <JAR_FILE>apigateway.jar</JAR_FILE>
                     </buildArgs>
                     <username>adelgrosso1978</username>
         			<password>dckr_pat_j-WxaOt1fTvKPbZLd2ftsZqu7Bg</password>        			
