--- a/calculator-infraestructure/apigateway/pom.xml
+++ b/calculator-infraestructure/apigateway/pom.xml
@@ -58,14 +58,14 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>                       
-                    <repository>registry.hub.docker.com/${project.groupId}/${project.artifactId}</repository>
-                    <tag>1.0</tag>
+                 <configuration>                       
+                    <tag>0.0.1</tag>
                     <buildArgs>
                         <JAR_FILE>apigateway.jar</JAR_FILE>
                     </buildArgs>
-                    <username>adelgrosso1978</username>
-        			<password>dckr_pat_j-WxaOt1fTvKPbZLd2ftsZqu7Bg</password>        			
+		    		<username>adelgrosso1978</username>
+        			<password>dckr_pat_j-WxaOt1fTvKPbZLd2ftsZqu7Bg</password>
+        			<repository>registry.hub.docker.com/com.calculator.infraestructure/apigateway</repository>     			
                 </configuration>
             </plugin>
 
