--- a/calculator-infraestructure/apigateway/pom.xml
+++ b/calculator-infraestructure/apigateway/pom.xml
@@ -43,30 +43,38 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<build>
+		<plugins>
 			<plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>${dockerfile-maven-version}</version>                               
-                <executions>
-                    <execution>                        
-                        <id>build-docker-image</id>
-                        <phase>package</phase>
-                        <goals>                                              
-                            <goal>build</goal>
-                            <goal>push</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                 <configuration>                       
-                    <tag>0.0.1</tag>
-                    <buildArgs>
-                        <JAR_FILE>apigateway-0.0.1</JAR_FILE>
-                    </buildArgs>
-		    		<username>adelgrosso1978</username>
-        			<password>dckr_pat_j-WxaOt1fTvKPbZLd2ftsZqu7Bg</password>
-        			<repository>registry.hub.docker.com/com.calculator.infraestructure/apigateway</repository>     			
-                </configuration>
-            </plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>${dockerfile-maven-version}</version>
+				<executions>
+					<execution>
+						<id>build-docker-image</id>
+						<phase>package</phase>
+						<goals>
+							<goal>build</goal>
+							<goal>push</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<buildArgs>
+						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+					<username>${project.groupId}</username>
+        			<password>${env.DOCKER_HUB_TOKEN}</password>
+        			<repository>registry.hub.docker.com/${project.groupId}/${project.artifactId}</repository>
+        			<tag>${project.version}</tag>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 		</plugins>
 		
 
