--- a/calculator-infraestructure/apigateway/pom.xml
+++ b/calculator-infraestructure/apigateway/pom.xml
@@ -63,8 +63,8 @@
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
-                    <username>adelgrosso1978</username>
-        			<password>dckr_pat_j-WxaOt1fTvKPbZLd2ftsZqu7Bg</password>
+                    <username>asdg1978</username>
+        			<password>Lqmtp0611--</password>
                 </configuration>
             </plugin>
 		</plugins>
