--- a/calculator-infraestructure/apigateway/pom.xml
+++ b/calculator-infraestructure/apigateway/pom.xml
@@ -64,7 +64,7 @@
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
                     <username>adelgrosso1978</username>
-        			<password>Lqmtp0611--</password>
+        			<password>dckr_pat_QnahyGIFPvb19CLgxKIYfb1nfG4</password>
                 </configuration>
             </plugin>
 		</plugins>
