--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,5 +17,12 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: adelgrosso1978
+          password: dckr_pat_uAs2Lc4kcZaXLOuUzUKJf-nUm1M
+          
       - name: Build with Maven
         run: mvn clean install
