--- a/calculator-infraestructure/apigateway/pom.xml
+++ b/calculator-infraestructure/apigateway/pom.xml
@@ -58,7 +58,7 @@
                     </execution>
                 </executions>
                 <configuration>                       
-                     <repository>calculator/${project.artifactId}</repository>
+                     	<repository>registry.hub.docker.com/calculator/${project.artifactId}</repository>			
                     <tag>${project.version}</tag>
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
